Fixed a typo in the sailing section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <input type="checkbox" id="sailing">
                 <label for="sailing">Sailing</label>
                 <section class="sailing-content contact-content sub-content">
-                    Current bowman onbard <a href="https://www.wetjobracing.com/" target="_blank" rel="noopener noreferrer"><span><b>Wetjob racing</b></span></a>
+                    Current bowman onboard <a href="https://www.wetjobracing.com/" target="_blank" rel="noopener noreferrer"><span><b>Wetjob racing</b></span></a>
                     <dl>
                         <dt><b>RORC baltic sea race </b> / 2024</dt>
                         <dd>A 600 nautical mile race starting and ending in Helsinki</dd>
