--- a/index.html
+++ b/index.html
@@ -1,95 +1,138 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Elliot Steffensen</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header>
-            <h1>Elliot Steffensen</h1>
-            <h2>Aspiring software engineer and sailor</h2>
-        </header>
-        <div class="content">
-            <div class="skills">
-                <input type="checkbox" id="skills" checked="true">
-                <label for="skills">Skills</label>
-                <section class="skills-content sub-content">
-                    <ul>
-                        <li><b>Python</b> - Advanced proficiency in several areas</li>
-                        <li><b>c#</b> - Proficient and able</li>
-                        <li><b>Java</b> - Proficient and able</li>
-                        <li><b>html/css/javascript</b> - Advanced proficiency in several areas</li>
-                        <li><b>Bash</b> - Advanced proficiency</li>
-                        <li><b>Windows/Linux/MacOS</b> - Advanced proficiency</li>
-                        <li><b>Office suite</b> - Advanced proficiency notably in excel</li>
-                        <li><b>Git</b> - Advanced proficiency</li>
-                        <li><b>Docker</b> - Advanced</li>
-                        <li><b>SQL/Postgresql/MongoDB</b> - Proficient</li>
-                        <li><b>SAP - MDG/Information steward</b> - Proficient</li>
-                        <li><b>English/Swedish</b> - Advanced proficiency</li>
-                    </ul>
-                </section>
-            </div>
-            <div class="exper">
-                <input type="checkbox" id="exper">
-                <label for="exper">Experience</label>
-                <section class="exper-content sub-content">
-                    <dl>
-                        <dt><b>Coop Sverige AB</b> / Masterdata CAT</dt>
-                        <dd>My responsibilities include filtering and analyzing data surrounding<br>articles and correcting possible errors</dd>
-                        <dt><b>Skanörs båtklubb</b> / Head sailing instructor</dt>
-                        <dd>My responsibilities include managing a team of sailing instructors as well<br>as teaching sailing to kids and adults</dd>
-                    </dl>
-                </section>
-            </div>
-            <div class="edu">
-                <input type="checkbox" id="edu">
-                <label for="edu">Education</label>
-                <section class="edu-content sub-content">
-                    <dl>
-                        <dt><b>KTH Royal Institute of Technology</b> / Computer engineering</dt>
-                        <dd>combines theoretical foundations in programming, algorithms, and hardware with practical applications in areas like AI, embedded systems, and cloud computing.</dd>
-                        <dt><b>KTH Royal Institute of Technology</b> / Tekniskt Basår</dt>
-                        <dd>Perperatory program for KTH:s tech related programs</dd>
-                        <dt><b>Pauli gymnasium</b> / Teknikprogrammet</dt>
-                        <dd>Introductory program into the world of technology and computing</dd>
-                    </dl>
-                </section>
-            </div>
-            <div class="sailing">
-                <input type="checkbox" id="sailing">
-                <label for="sailing">Sailing</label>
-                <section class="sailing-content contact-content sub-content">
-                    Current bowman onboard <a href="https://www.wetjobracing.com/" target="_blank" rel="noopener noreferrer"><span><b>Wetjob racing</b></span></a>
-                    <dl>
-                        <dt><b>RORC baltic sea race </b> / 2024</dt>
-                        <dd>A 600 nautical mile race starting and ending in Helsinki</dd>
-                        <dt><b>Gotland runt</b> / 2024</dt>
-                        <dd>Race around gotland island. The biggest yearly offshore race</dd>
-                        <dt><b>KSSS offshore clinic</b> / 2024</dt>
-                        <dd>Pathway into the world of offshore sailing</dd>
-                    </dl>
-                </section>
-            </div>
-            <div class="contact">
-                <input type="checkbox" id="contact">
-                <label for="contact">Contact</label>
-                <section class="contact-content sub-content">
-                    <ul>
-                        <li><a href="mailto:elliot@steffensens.io"><span><b>Email</b> - elliot@steffensens.io</span></a></li>
-                        <li><a href="https://github.com/xishell" target="_blank" rel="noopener noreferrer"><span><b>Github</b> - xishell</span></a></li>
-                        <li><a href="https://www.linkedin.com/in/elliot-steffensen-05694a227/" target="_blank" rel="noopener noreferrer"><span><b>LinkedIn</b> - Elliot Steffensen</span></a></li>
-                    </ul>
-                </section>
-            </div>
+      <header>
+        <h1>Elliot Steffensen</h1>
+        <h2>Aspiring software engineer and sailor</h2>
+      </header>
+      <div class="content">
+        <div class="edu">
+          <input type="checkbox" id="edu" checked="true" />
+          <label for="edu">Education</label>
+          <section class="edu-content sub-content">
+            <dl>
+              <dt>
+                <b>KTH Royal Institute of Technology</b> / Computer engineering
+              </dt>
+              <dd>
+                combines theoretical foundations in programming, algorithms, and
+                hardware with practical applications in areas like AI, embedded
+                systems, and cloud computing.
+              </dd>
+              <dt><b>KTH Royal Institute of Technology</b> / Tekniskt Basår</dt>
+              <dd>Perperatory program for KTH:s tech related programs</dd>
+              <dt><b>Pauli gymnasium</b> / Teknikprogrammet</dt>
+              <dd>
+                Introductory program into the world of technology and computing
+              </dd>
+            </dl>
+          </section>
         </div>
+        <div class="exper">
+          <input type="checkbox" id="exper" />
+          <label for="exper">Experience</label>
+          <section class="exper-content sub-content">
+            <dl>
+              <dt><b>Coop Sverige AB</b> / Masterdata CAT</dt>
+              <dd>
+                My responsibilities include filtering and analyzing data
+                surrounding<br />articles and correcting possible errors
+              </dd>
+              <dt><b>Skanörs båtklubb</b> / Head sailing instructor</dt>
+              <dd>
+                My responsibilities include managing a team of sailing
+                instructors as well<br />as teaching sailing to kids and adults
+              </dd>
+            </dl>
+          </section>
+        </div>
+        <div class="skills">
+          <input type="checkbox" id="skills" />
+          <label for="skills">Skills</label>
+          <section class="skills-content sub-content">
+            <ul>
+              <li><b>Python</b> - Advanced proficiency in several areas</li>
+              <li><b>c#</b> - Proficient and able</li>
+              <li><b>Java</b> - Proficient and able</li>
+              <li>
+                <b>html/css/javascript</b> - Advanced proficiency in several
+                areas
+              </li>
+              <li><b>Bash</b> - Advanced proficiency</li>
+              <li><b>Windows/Linux/MacOS</b> - Advanced proficiency</li>
+              <li>
+                <b>Office suite</b> - Advanced proficiency notably in excel
+              </li>
+              <li><b>Git</b> - Advanced proficiency</li>
+              <li><b>Docker</b> - Advanced</li>
+              <li><b>SQL/Postgresql/MongoDB</b> - Proficient</li>
+              <li><b>SAP - MDG/Information steward</b> - Proficient</li>
+              <li><b>English/Swedish</b> - Advanced proficiency</li>
+            </ul>
+          </section>
+        </div>
+        <div class="sailing">
+          <input type="checkbox" id="sailing" />
+          <label for="sailing">Sailing</label>
+          <section class="sailing-content contact-content sub-content">
+            Current bowman onboard
+            <a
+              href="https://www.wetjobracing.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><span><b>Wetjob racing</b></span></a
+            >
+            <dl>
+              <dt><b>RORC baltic sea race </b> / 2024</dt>
+              <dd>A 600 nautical mile race starting and ending in Helsinki</dd>
+              <dt><b>Gotland runt</b> / 2024</dt>
+              <dd>
+                Race around gotland island. The biggest yearly offshore race
+              </dd>
+              <dt><b>KSSS offshore clinic</b> / 2024</dt>
+              <dd>Pathway into the world of offshore sailing</dd>
+            </dl>
+          </section>
+        </div>
+        <div class="contact">
+          <input type="checkbox" id="contact" />
+          <label for="contact">Contact</label>
+          <section class="contact-content sub-content">
+            <ul>
+              <li>
+                <a href="mailto:elliot@steffensens.io"
+                  ><span><b>Email</b> - elliot@steffensens.io</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://github.com/xishell"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><span><b>Github</b> - xishell</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/elliot-steffensen-05694a227/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><span><b>LinkedIn</b> - Elliot Steffensen</span></a
+                >
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
